# GA4GH-RegBot

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  lint.yml
examples/: DEMO.md  run_demo.py
examples/data/: sample_consent_complex.txt  sample_consent_short.txt  sample_ga4gh_policy_stub.txt
examples/eval/: queries_ga4gh.txt
src/: main.py  streamlit_app.py
src/regbot/: __init__.py  compliance.py  config.py  embeddings.py  eval_queries.py  fusion.py  grounding.py  ingestion.py  retrieval.py  study_type.py  text_utils.py  types.py
tests/: test_grounding.py  test_ingestion.py  test_overlap.py  test_pipeline.py  test_smoke.py  test_text_utils.py
